Resolved conflicts
Bumped pom version to 0.8.0-SNAPSHOT
Need to resolve ConnectorSecuirtyConfiguration with DCP resolver